--- a/Mazaare3.csproj
+++ b/Mazaare3.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.PaginatedList" Version="5.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Grpc.Core.Testing" Version="2.46.5" />
     <PackageReference Include="HttpPostedFileHelper" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.9" />
